# c-rust-program-pairs

./: Cargo.toml
.github/workflows/: rust.yml
metadata/: metadata.schema.json  program-pairs.md
metadata/individual/: big-software.json  system-tools.json
metadata/project/: coreutils.json  diffutils.json  findutils.json  procps.json  util-linux.json
src/: cli.rs  corpus.rs  lib.rs  metadata.rs
src/corpus/: delete.rs  downloader.rs  errors.rs  parser.rs  schema.rs  writer.rs
