[package]
name = "c-rust-program-pairs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
flate2 = "1.1.2"
git2 = "0.20.2"
indicatif = "0.18.0"
jsonschema = "0.38.0"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
tar = "0.4.44"
thiserror = "2.0.16"
typify = "0.5.0"
walkdir = "2.5.0"

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = "0.5.0"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
unescaped_backticks = "warn"
